--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,11 +6,18 @@ name: Node.js CI
 on:
   push:
     branches: [ master ]
+    paths-ignore:
+      - 'package.json'
+      - 'CHANGELOG.md'
   pull_request:
     branches: [ master ]
 
 jobs:
-  build:
+
+  # -------------------------------------------------------------------------------
+  #  Do a clean build and test
+  # -------------------------------------------------------------------------------
+  build_and_test:
 
     runs-on: ubuntu-latest
 
@@ -27,3 +34,24 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
+
+  # -------------------------------------------------------------------------------
+  #  Bump te semver and update CHANGELOG when doing merges to master
+  # -------------------------------------------------------------------------------
+  bump_semver:
+
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        token: ${{ secrets.GH_TOKEN_ACTION }}
+    - name: Bump version and push tag
+      uses: TriPSs/conventional-changelog-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN_ACTION }}
+        git-message: 'chore(release): {version}'
+        preset: 'angular'
+        tag-prefix: 'v'
+        output-file: 'CHANGELOG.md'
