fix: token issue

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -45,12 +45,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-      with:
-        token: ${{ secrets.GH_TOKEN_ACTION }}
     - name: Bump semver and push tag
       uses: TriPSs/conventional-changelog-action@v3
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN_ACTION }}
+        github-token: ${{ secrets.GH_TOKEN_ACTION }}
         git-message: 'chore(release): {version}'
         preset: 'angular'
         tag-prefix: 'v'
