--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -58,4 +58,6 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
-
+    - run: npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
