--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ziti-sdk-js",
+  "name": "@openziti/ziti-sdk-js",
   "version": "0.1.1",
   "description": "A JavaScript-based SDK for delivering secure browser-based web applications over a Ziti Network",
   "scripts": {
