--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,7 +61,7 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
-    - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
+    - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
     - run: npm publish --access public
       env:
         NPM_TOKEN: ${{secrets.NPM_TOKEN}}
