--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -55,13 +55,15 @@ jobs:
         fetch-depth: 2
     - run: git pull
     - name: Use Node.js ${{ matrix.node-version }}
+      # Setup .npmrc file to publish to npm
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+        registry-url: 'https://registry.npmjs.org'
     - run: npm ci
     - run: npm run build
     - run: npm test
-    - run: echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+    - run: npm install
     - run: npm publish --access public
       env:
-        NPM_TOKEN: ${{secrets.NPM_TOKEN}}
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
