--- a/package.json
+++ b/package.json
@@ -43,10 +43,7 @@
       ]
     }
   },
-  "browser": {
-    "./src/node/index.js": "./src/client.js",
-    "./lib/node/index.js": "./lib/client.js"
-  },
+  "browser": "./dist/ziti.js",
   "devDependencies": {
     "@babel/cli": "^7.11.6",
     "@babel/core": "^7.11.6",
