--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,6 +11,12 @@ on:
       - 'CHANGELOG.md'
   pull_request:
     branches: [ master ]
+  workflow_dispatch:
+    inputs:
+      tags:
+        required: false
+        description: 'Misc tags'  
+
 
 jobs:
 
