--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -68,7 +68,9 @@ jobs:
         output-file: 'CHANGELOG.md'
 
     - name: Build
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 2
     - run: git pull
 
     - name: Use Node.js ${{ matrix.node-version }}
