--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -67,31 +67,32 @@ jobs:
         tag-prefix: 'v'
         output-file: 'CHANGELOG.md'
 
-    - name: Build
-    - uses: actions/checkout@v2
+    - name: Pull new semver
+      if: github.ref == 'refs/heads/master'
+      uses: actions/checkout@v2
       with:
         fetch-depth: 2
     - run: git pull
 
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Setup .npmrc
+      if: github.ref == 'refs/heads/master'
       # Setup .npmrc file to prepare for possible publish to npm
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
         registry-url: 'https://registry.npmjs.org'
+
+    - name: Build and Test
+      uses: actions/checkout@v2
     - run: npm ci
     - run: npm run build
-
-    - name: Test
-      uses: actions/checkout@v2
     - run: npm test
 
-    # steps:
-    #   - name: Publish
-    #     if: github.ref == 'refs/heads/master'
-    #     uses: actions/checkout@v2
-    #   - run: npm install
-    #   - run: npm publish --access public
-    #     env:
-    #       NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: Publish
+      if: github.ref == 'refs/heads/master'
+      uses: actions/checkout@v2
+    - run: npm install
+    - run: npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
