--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,7 +70,9 @@ jobs:
     - name: Pull newly bumped semver
       if: github.ref == 'refs/heads/master'
       uses: actions/checkout@v2
-      - run: git pull
+      with:
+        fetch-depth: 2
+      run: git pull
 
     - name: Setup .npmrc
       if: github.ref == 'refs/heads/master'
@@ -82,14 +84,14 @@ jobs:
 
     - name: Build and Test
       uses: actions/checkout@v2
-      - run: npm ci
-      - run: npm run build
-      - run: npm test
+      run: npm ci
+      run: npm run build
+      run: npm test
 
     - name: Publish
       if: github.ref == 'refs/heads/master'
       uses: actions/checkout@v2
-      - run: npm install
-      - run: npm publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      run: npm install
+      run: npm publish --access public
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
