--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@babel/runtime": "^7.11.2",
     "asn1js": "^2.0.26",
     "assert": "^2.0.0",
+    "async-mutex": "^0.2.4",
     "chnl": "^1.2.0",
     "consola": "^2.15.0",
     "drag-drop": "^6.0.2",
@@ -69,6 +70,7 @@
     "flat-options": "^0.1.3",
     "format-message": "^6.2.3",
     "libsodium-wrappers": "^0.7.8",
+    "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
     "lodash.foreach": "^4.5.0",
     "lodash.has": "^4.5.2",
@@ -76,6 +78,7 @@
     "lodash.isnull": "^3.0.0",
     "lodash.isundefined": "^3.0.1",
     "lodash.merge": "^4.6.2",
+    "lodash.minby": "^4.6.0",
     "lodash.result": "^4.5.2",
     "lodash.tonumber": "^4.0.3",
     "micromodal": "^0.4.6",
