--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
         preset: 'angular'
         tag-prefix: 'v'
         output-file: 'CHANGELOG.md'
+        skip-on-empty: true # do not alter semver when we push 'chore: ...' commits
 
     - name: Pull newly bumped semver
       if: github.ref == 'refs/heads/master'
@@ -68,7 +69,13 @@ jobs:
     - name: Test
       run: npm test
 
-    - name: Publish
+    - name: Publish beta release
+      run: npm publish --tag next --access public
+      if: github.ref != 'refs/heads/master'
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+    - name: Publish production release
       if: github.ref == 'refs/heads/master'
       run: npm publish --access public
       env:
