--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,12 @@ jobs:
     - name: Test
       run: npm test
 
+    - name: Unit-test Coverage
+      run: npm run coverage
+
+    - name: Unit-test Coverage Report
+      run: npm run coverage-report
+
 # not yet
     # - name: Publish beta release
     #   run: npm publish --tag next --access public
