--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "@openziti/ziti-sdk-js",
-  "version": "0.4.6",
+  "version": "0.4.7",
   "description": "A JavaScript-based SDK for delivering secure browser-based web applications over a Ziti Network",
   "scripts": {
-    "test": "echo \"Warning: no test exists yet\" ",
+    "test": "cross-env NODE_ENV=test mocha -t 30000 -R ${REPORTER:-spec} tests/unit/index.js",
+    "test-karma": "karma start",
+    "coverage": "rm -rf coverage && nyc --reporter=lcov --reporter=text-summary npm test",
+    "coverage-report": "nyc report",
     "browserify": "browserify src/node/index.js -o dist/ziti.js -s ziti",
     "build": "npm run build:clean && npm run build:lib && npm run build:dist",
     "build:clean": "rimraf lib dist",
     "build:lib": "babel --config-file ./.lib.babelrc src --out-dir lib",
     "build:dist": "npm run browserify && npm run minify",
     "minify": "terser --compress --mangle -o dist/ziti.min.js dist/ziti.js"
+  },
+  "nyc": {
+    "exclude": [
+      "tests"
+    ]
   },
   "repository": {
     "type": "git",
@@ -46,7 +54,7 @@
   "main": "./dist/ziti.js",
   "browser": {
     "./dist/ziti.js": "./dist/ziti.js",
-    "./src/node/index.js": "./src/client.js"
+    "./src/node/index.js": "./src/index.js"
   },
   "devDependencies": {
     "@babel/cli": "^7.11.6",
@@ -56,8 +64,19 @@
     "babelify": "^10.0.0",
     "browserify": "^16.5.2",
     "cross-env": "^7.0.2",
+    "karma": "^5.2.3",
+    "karma-browserify": "^7.0.0",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-coverage": "^2.0.3",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "mocha": "^8.1.3",
+    "mocha-lcov-reporter": "^1.3.0",
+    "mock-local-storage": "^1.1.15",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
-    "tinyify": "^3.0.0"
+    "tinyify": "^3.0.0",
+    "watchify": "^3.11.1"
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
