--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "asn1js": "^2.0.26",
     "assert": "^2.0.0",
     "async-mutex": "^0.2.4",
+    "buffer": "^5.6.1",
     "chnl": "^1.2.0",
     "consola": "^2.15.0",
     "drag-drop": "^6.0.2",
@@ -101,11 +102,13 @@
     "lodash.result": "^4.5.2",
     "lodash.tonumber": "^4.0.3",
     "micromodal": "^0.4.6",
+    "node-forge": "^0.10.0",
     "pkijs": "^2.1.90",
     "promise-controller": "^1.0.0",
     "promise.prototype.finally": "^3.1.2",
     "q": "^1.5.1",
     "readable-stream": "^3.6.0",
+    "robust-websocket": "^1.0.0",
     "url": "^0.11.0"
   }
 }
