--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "flat-options": "^0.1.3",
     "format-message": "^6.2.3",
     "libsodium-wrappers": "^0.7.8",
+    "lodash.concat": "^4.5.0",
     "lodash.filter": "^4.6.0",
     "lodash.find": "^4.6.0",
     "lodash.foreach": "^4.5.0",
