chore: ensure changelog is generated to contain ALL updates, not just the last 5

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,6 +47,7 @@ jobs:
         tag-prefix: 'v'
         output-file: 'CHANGELOG.md'
         skip-on-empty: true # do not alter semver when we push 'chore: ...' commits
+        release-count: 0 # ensure changelog is generated to contain ALL updates
 
     - name: Pull newly bumped semver
       if: github.ref == 'refs/heads/master'
