--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "@types/lodash.isnull": "^3.0.6",
     "asn1js": "^2.0.26",
     "assert": "^2.0.0",
     "async-mutex": "^0.2.4",
@@ -90,6 +91,7 @@
     "events": "^3.2.0",
     "flat-options": "^0.1.3",
     "format-message": "^6.2.3",
+    "jwt-decode": "^3.1.2",
     "libsodium-wrappers": "^0.7.8",
     "lodash.concat": "^4.5.0",
     "lodash.filter": "^4.6.0",
