--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@openziti/ziti-sdk-js",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "description": "A JavaScript-based SDK for delivering secure browser-based web applications over a Ziti Network",
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha -t 30000 -R ${REPORTER:-spec} tests/unit/index.js",
@@ -81,6 +81,7 @@
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "@types/lodash.isnull": "^3.0.6",
+    "arraybuffer-to-string": "^1.0.2",
     "asn1js": "^2.0.26",
     "assert": "^2.0.0",
     "async-mutex": "^0.3.1",
@@ -91,6 +92,7 @@
     "chnl": "^1.2.0",
     "combined-stream": "^1.0.8",
     "consola": "^2.15.0",
+    "cookie-interceptor": "^1.0.0",
     "create-hash": "^1.2.0",
     "drag-drop": "^6.0.2",
     "events": "^3.3.0",
