--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "events": "^3.3.0",
     "flat-options": "^0.1.3",
     "format-message": "^6.2.3",
+    "from2": "^2.3.0",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "libsodium-wrappers": "^0.7.8",
@@ -114,6 +115,7 @@
     "lodash.result": "^4.5.2",
     "lodash.tonumber": "^4.0.3",
     "micromodal": "^0.4.6",
+    "multistream": "^4.1.0",
     "node-forge": "^0.10.0",
     "pkijs": "^2.1.90",
     "promise-controller": "^1.0.0",
@@ -123,6 +125,7 @@
     "readable-stream": "^3.6.0",
     "robust-websocket": "^1.0.0",
     "stream-browserify": "^3.0.0",
+    "typedarray-to-buffer": "^4.0.0",
     "url": "^0.11.0",
     "utf-8-validate": "^5.0.4"
   }
