--- a/package.json
+++ b/package.json
@@ -57,14 +57,15 @@
     "./src/node/index.js": "./src/index.js"
   },
   "devDependencies": {
-    "@babel/cli": "^7.11.6",
-    "@babel/core": "^7.11.6",
-    "@babel/plugin-transform-regenerator": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
+    "@babel/plugin-transform-regenerator": "^7.13.15",
+    "@babel/preset-env": "^7.14.2",
     "babelify": "^10.0.0",
     "browserify": "^16.5.2",
     "cross-env": "^7.0.2",
-    "karma": "^5.2.3",
+    "elliptic": "^6.5.4",
+    "karma": "^6.3.2",
     "karma-browserify": "^7.0.0",
     "karma-chrome-launcher": "^3.1.0",
     "karma-coverage": "^2.0.3",
@@ -79,7 +80,7 @@
     "watchify": "^3.11.1"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.2",
+    "@babel/runtime": "^7.14.0",
     "@types/lodash.isnull": "^3.0.6",
     "arraybuffer-to-string": "^1.0.2",
     "asn1js": "^2.0.26",
