--- a/package.json
+++ b/package.json
@@ -100,6 +100,8 @@
     "flat-options": "^0.1.3",
     "format-message": "^6.2.3",
     "from2": "^2.3.0",
+    "html-select": "^2.3.24",
+    "html-tokenize": "^2.0.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "libsodium-wrappers": "^0.7.8",
@@ -127,6 +129,7 @@
     "readable-stream": "^3.6.0",
     "robust-websocket": "^1.0.0",
     "stream-browserify": "^3.0.0",
+    "through2": "^4.0.2",
     "typedarray-to-buffer": "^4.0.0",
     "url": "^0.11.0",
     "utf-8-validate": "^5.0.4",
